--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Display</title>
-     <style>
+   <style>
         body {
             display: flex;
             justify-content: center;
@@ -12,18 +12,18 @@
             height: 100vh;
             margin: 0;
             background-color: #ffffff; /* Set background color to white */
+            animation: fadeInOut 4s infinite;
             opacity: 0;
-            animation: fadeIn 2s forwards;
         }
         img {
             max-width: 100%;
             height: auto;
         }
-        @keyframes fadeIn {
-            to { opacity: 1; }
-        }
-        @keyframes fadeOut {
-            to { opacity: 0; }
+        @keyframes fadeInOut {
+            0% { opacity: 0; }
+            25% { opacity: 1; }
+            75% { opacity: 1; }
+            100% { opacity: 0; }
         }
     </style>
 </head>
